KAAV-2363 Fix timelines overlapping with project list elements when error message is present

--- a/src/components/ProjectTimeline/ProjectTimeline.scss
+++ b/src/components/ProjectTimeline/ProjectTimeline.scss
@@ -191,6 +191,9 @@
 }
 .timeline-error {
   color: $color-disabled;
+}
+.timeline-error-no-items {
+  color: $color-disabled;
   padding-top: 33px;
 }
 .hide-background {
